Revision history for Dist-Build

{{$NEXT}}

0.012     2024-08-31 21:05:21+02:00 Europe/Brussels
          - Shorten module_name and module_version arguments in add_xs
          - Add support for exporting and importing headers
          - Pass on config in Dist::Build::XS

0.011     2024-08-11 23:19:50+02:00 Europe/Brussels
          - Let get_config modify build stage arguments
          - Add main_module_name helper

0.010     2024-08-04 00:41:56+02:00 Europe/Brussels
          - Add missing prereqs due to misconfigured dist.ini

0.009     2024-08-01 23:01:19+02:00 Europe/Brussels
          - Make path portable in build tests

0.008     2024-08-01 12:56:09+02:00 Europe/Brussels
          - Add compilation configurator
          - Only load Dist::Build::XS dependencies when necessary
          - Remove curdir and inc/ from automatic include paths in Dist::Build::XS
          - Allow file to be specified instead of module in Dist::Build::XS
          - Allow sources to be a hash in Dist::Build::XS
          - Extract script and lib logic out of base module
          - Add clean and autoclean actions

0.007     2024-07-20 15:19:09+02:00 Europe/Brussels
          - Properly depend on new ExtUtils::Builder::Compiler
          - Fix misspelling of extra_linker_flags
          - Add file argument to Dist::Build::XS
          - Add new_planner delegate

0.006     2024-07-15 21:22:15+02:00 Europe/Brussels
          - Make mkdir nodes non-phony
          - Provide better messages for most actions

0.005     2024-07-14 16:30:28+02:00 Europe/Brussels
          - Fix argument handling in mkdir
          - Add dry_run support to install deserializer

0.004     2024-07-13 13:49:39+02:00 Europe/Brussels
          - Sort test files
          - Add self delegate for DSL

0.003     2024-04-27 22:55:07+02:00 Europe/Brussels
          - Allow extra compiler and linker flags to be a string

0.002     2024-04-27 12:07:09+02:00 Europe/Brussels
          - Add dynamic prereqs